# winband

./: .gitmodules  CMakeLists.txt  LICENSES.md  README.md
assets/samples/salamander/: .gitkeep
assets/soundfonts/: .gitkeep
assets/theme/: dark.json
plugin/: CMakeLists.txt
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/drummer/: AdaptiveDrummer.cpp  AdaptiveDrummer.h  DrumPattern.cpp  DrumPattern.h  DrumSampler.cpp  DrumSampler.h
src/: MainComponent.cpp  MainComponent.h  main.cpp
src/audio/: AsioManager.cpp  AsioManager.h  AudioEngine.cpp  AudioEngine.h
src/drummer/: AdaptiveDrummer.cpp  AdaptiveDrummer.h  DrumPattern.cpp  DrumPattern.h  DrumSampler.cpp  DrumSampler.h  EnergyAnalyzer.cpp  EnergyAnalyzer.h
src/tracks/: AudioTrack.cpp  AudioTrack.h  DrummerTrack.cpp  DrummerTrack.h  TrackBase.cpp  TrackBase.h
src/ui/: MainWindow.cpp  MainWindow.h  TrackView.cpp  TrackView.h  TransportBar.cpp  TransportBar.h
tests/: DrumPatternTest.cpp
